Use the right name for glew; or it all goes to hell

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,8 +31,7 @@ message("------------------------" ${OPENGL_LIBRARIES})
 target_link_libraries(
         openvrtest
         ${OPENGL_LIBRARIES}
-        #GLEW:GLEW
-        "glew32s"
+        GLEW::GLEW
         SDL2::SDL2
         ${OPENVR_LIBRARY}
         ${CMAKE_DL_LIBS}
