Can import dae, just not show

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,9 +5,11 @@ include(package.cmake)
 
 set(CMAKE_CXX_STANDARD 11)
 
-set(SOURCE_FILES main.cpp geom/Matrices.cpp)
+set(SOURCE_FILES main.cpp geom/Matrices.cpp Controller.cpp GlContext.cpp SdlContext.cpp SdlTargetWindow.cpp Square.cpp VrInput.cpp)
 
 add_executable(openvrtest ${SOURCE_FILES})
+
+find_package(assimp REQUIRED)
 
 ## OpenGL / GLU
 find_package(OpenGL REQUIRED)
@@ -22,15 +24,18 @@ include_directories(
         ${GLEW_INCLUDE_DIR}
         ${SDL2_INCLUDE_DIR}
         ${OPENVR_INCLUDE_DIR}
+		${assimp_INCLUDE_DIRS}
 )
 
 message("------------------------" ${OPENVR_LIBRARY})
 message("------------------------" ${GLEW_LIBRARY})
 message("------------------------" ${OPENGL_LIBRARIES})
+message("------------------------ assimp: " ${assimp_INCLUDE_DIRS})
 
 target_link_libraries(
         openvrtest
         ${OPENGL_LIBRARIES}
+		${ASSIMP_LIBRARIES}
         GLEW::GLEW
         SDL2::SDL2
         ${OPENVR_LIBRARY}
